--- a/GiftCardFormRate.html
+++ b/GiftCardFormRate.html
@@ -60,8 +60,7 @@
                             </ul>
                             <p class="text-center open-sans text-bold font-size-20">£299</p>
                                 <input class="radio center" type="radio" name="options" id="option3">
-                            <label class="text-center" >
-                            </label>
+                            <label class="text-center"></label>
                         </div>
                 </div>
             </div>
@@ -69,7 +68,7 @@
         <div class="row margin0">
             <div class="col-xs-12">
                 <p class="text-center">
-                    <button class="btn btn-primary btn-custom btn-lg">BUY NOW></button>
+                    <button class="btn btn-primary btn-custom btn-lg">BUY NOW ></button>
                 </p>
             </div>
         </div>
