Update styles of second page

--- a/GiftCard.html
+++ b/GiftCard.html
@@ -13,7 +13,7 @@
 <body>
 <div class="container-fluid padding0">
     <!--Image-->
-    <div class="row-fluid">
+    <div class="row">
         <div class="col-md-12 padding0">
             <img src="img/july_2016_gift_cards_01.png" class="img-responsive" alt="">
         </div>
@@ -22,11 +22,11 @@
     <!--Text-->
     <div class="row">
         <div class="col-md-8 col-md-offset-2 margintop2em">
-            <p class="text-center open-sans-light font-size-35">Give the Gift of Memories</p>
+            <p class="text-center open-sans35">Give the Gift of Memories</p>
             <p class="text-center open-sans-bold font-size-15">Made with love in London. Redeemable in London.</p>
-            <p class ="text-center open-sans-light font-size-15 margin0">Splento gift card is not just a gift card, it's a perfect present in any occasion: birthdays, graduations, weddings, anniversaries, corporate gifts, hen parties.</p>
-            <p class ="text-center open-sans-light font-size-15 margin0">Book now and we'll post a gorgeous gift card the same day and you'll also receive an email copy immediately. Once the photoshoot is complete,</p>
-            <p class="text-center open-sans-light font-size-15 margin0">our team will send a unique Splento box with a USB-drive and the best handpicked prints.</p>
+            <p class ="text-center open-sans15">Splento gift card is not just a gift card, it's a perfect present in any occasion: birthdays, graduations, weddings, anniversaries, corporate gifts, hen parties.</p>
+            <p class ="text-center open-sans15">Book now and we'll post a gorgeous gift card the same day and you'll also receive an email copy immediately. Once the photoshoot is complete,</p>
+            <p class="text-center open-sans15">our team will send a unique Splento box with a USB-drive and the best handpicked prints.</p>
         </div>
     </div>
 
@@ -60,7 +60,24 @@
     <!--Congratulations-->
     <div class="row">
         <div class="col-md-6 col-md-offset-3 margintop2em">
-            <img src="img/july_2016_gift_cards_12.png" class="img-responsive center" alt="postcard">
+            <img src="img/form_gift_card.png" class="img-responsive center" alt="postcard" style="position: absolute">
+            <div class="row" style="position: relative; margin-top: 17%; display: inline-block">
+                <div class="">
+
+                    To Email
+                    <input type="text" class="dotted" id="emailTo">
+                    From Email
+                    <input type="text" class="dotted" id="emailFrom">
+                </div>
+                <div>
+                    <p class="splento-font text-center" style="margin-top: 1em; ">splento</p>
+                </div>
+                <div >
+                    A few words
+                   <input type="text" class="dotted" id="fewWords">
+                </div>
+
+            </div>
         </div>
     </div>
 
