--- a/GiftCardFormRate.html
+++ b/GiftCardFormRate.html
@@ -3,54 +3,72 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/giftCard.css" rel="stylesheet">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link href="css/giftCard.css" rel="stylesheet">
+    <link href="css/radio.css" rel="stylesheet">
     <title>Gift Card</title>
 </head>
 <body>
 <div class="container-fluid padding0">
-    <div class="background-img row-fluid">
-        <div style="padding-top: 23em; padding-bottom: 16em">
-        <div class="col-md-12 margin0">
-            <p class="splento-font text-center" style="margin-top: -0.3em; margin-bottom: -0.4em;">splento</p>
-            <!--<img src="img/logo.png" class="img-responsive center" >-->
-            <p class="text-center open-sans-light font-size-35">Give the Gift of Memories</p>
+    <div class="row-fluid">
+        <div class="col-md-12 padding0">
+            <img src="img/july_2016_gift_cards_01.png" class="img-responsive" alt="">
+        </div>
+    </div>
+
+    <!--Text-->
+    <div class="row">
+        <div class="col-md-8 col-md-offset-2 margintop2em">
+            <p class="text-center open-sans35">Give the Gift of Memories</p>
+            <p class="text-center open-sans-bold font-size-15">Made with love in London. Redeemable in London.</p>
+            <p class ="text-center open-sans15">Splento gift card is not just a gift card, it's a perfect present in any occasion: birthdays, graduations, weddings, anniversaries, corporate gifts, hen parties.</p>
+            <p class ="text-center open-sans15">Book now and we'll post a gorgeous gift card the same day and you'll also receive an email copy immediately. Once the photoshoot is complete,</p>
+            <p class="text-center open-sans15">our team will send a unique Splento box with a USB-drive and the best handpicked prints.</p>
+        </div>
+    </div>
+
+    <div class=" row-fluid">
+            <img src="img/background_gift_card.png" class="img-responsive center hidden-xs hidden-sm background-img">
+        <div class="col-md-12 position-to-img">
+            <p class="splento-font text-center">splento</p>
+            <p class="text-center open-sans35 margin0">Give the Gift of Memories</p>
             <div class="row margin0">
-                <div class="col-md-6 col-md-offset-3">
-                        <div style="display: inline-block">
-                            <img src="img/rate_form_item1.png" style="display: inline-block" class="img-responsive center" alt=""><p></p>
-                            <ul class="purple-point open-sans-light font-size-12" style="display: inline-block">
+                        <div  class="col-md-offset-3 col-md-2">
+                            <img src="img/rate_form_item1.png" class="img-responsive center rate-img" alt="rate image"><p></p>
+                            <ul class="purple-point open-sans12">
                                 <li>2 Hour Photoshoot</li>
                                 <li>40 Retouched Photos</li>
                                 <li>Online Photo Gallery</li>
                             </ul>
-                            <div class="hidden-xs hidden-xm" style="padding: 26.3px"></div>
-                            <p class="text-center open-sans text-bold font-size-20">£98</p>
-                            <label class="text-center" style="width: 100%">
-                                <input type="radio" name="options" id="option1" checked >
-                            </label>
+                            <div class="hidden-xs hidden-xm space26"></div>
+                            <p class="text-center open-sans-bold20">£98</p>
+                            <div class="radio radio-primary radio-centred">
+                                <input type="radio" name="rate" id="Radios1" value="98£">
+                                <label />
+                            </div>
                         </div>
-                        <div style="display: inline-block">
-                            <img src="img/rate_form_item2.png" style="display: inline-block" class="img-responsive center" alt=""><p></p>
-                            <ul class="green-point open-sans-light font-size-12" style="display: inline-block">
+                        <div class="col-md-2">
+                            <img src="img/rate_form_item2.png" class="img-responsive center rate-img" alt="rate image"><p></p>
+                            <ul class="green-point open-sans12">
                                 <li>3 Hour Photoshoot</li>
                                 <li>60 Retouched Photos</li>
                                 <li>Online Photo Gallery</li>
                                 <li>20 Printed Photos</li>
                                 <li>USB with all photos</li>
                             </ul>
-                            <div class="hidden-xs hidden-xm" style="padding: 9px"></div>
-                            <p class="text-center open-sans text-bold font-size-20">£147</p>
-                            <label class="text-center" style="width: 100%">
-                                <input type="radio" name="options" id="option2">
-                            </label>
+                            <div class="hidden-xs hidden-xm space9"></div>
+                            <p class="text-center open-sans-bold20">£147</p>
+                            <div class="radio radio-primary radio-centred">
+                                <input type="radio" name="rate" id="Radios2" value="147£">
+                                <label />
+                            </div>
                         </div>
-                        <div style="display: inline-block">
-                            <img src="img/rate_form_item3.png" style="display: inline-block" class="img-responsive center" alt=""><p></p>
-                            <ul class="blue-point open-sans-light font-size-12" style="display: inline-block">
+                        <div class="col-md-2">
+                            <img src="img/rate_form_item3.png" class="img-responsive center rate-img" alt="rate image"><p></p>
+                            <ul class="blue-point open-sans12">
                                 <li>4 Hour Photoshoot</li>
                                 <li>80 Retouched Photos</li>
                                 <li>Online Photo Gallery</li>
@@ -58,21 +76,22 @@
                                 <li>USB with all photos</li>
                                 <li>Photo album</li>
                             </ul>
-                            <p class="text-center open-sans text-bold font-size-20">£299</p>
-                                <input class="radio center" type="radio" name="options" id="option3">
-                            <label class="text-center"></label>
+                            <p class="text-center open-sans-bold20">£299</p>
+                            <div class="radio radio-primary radio-centred">
+                                <input type="radio" name="rate" id="Radios3" value="299£">
+                                <label />
+                            </div>
                         </div>
-                </div>
             </div>
     </div>
         <div class="row margin0">
             <div class="col-xs-12">
-                <p class="text-center">
+                <p class="text-center margintop1em">
                     <button class="btn btn-primary btn-custom btn-lg">BUY NOW ></button>
                 </p>
             </div>
         </div>
     </div>
-</div></div>
+</div>
 </body>
 </html>
