--- a/GiftCardFormRate.html
+++ b/GiftCardFormRate.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link href="css/giftCard.css" rel="stylesheet">
     <link href="css/radio.css" rel="stylesheet">
     <title>Gift Card</title>
@@ -15,7 +13,7 @@
 <div class="container-fluid padding0">
     <div class="row-fluid">
         <div class="col-md-12 padding0">
-            <img src="img/july_2016_gift_cards_01.png" class="img-responsive" alt="">
+            <img src="img/gift_card_top.jpg" class="img-responsive" alt="">
         </div>
     </div>
 
@@ -31,13 +29,13 @@
     </div>
 
     <div class=" row-fluid">
-            <img src="img/background_gift_card.png" class="img-responsive center hidden-xs hidden-sm background-img">
+            <img src="img/gift_card_rate_background.jpg" class="img-responsive center hidden-xs hidden-sm background-img">
         <div class="col-md-12 position-to-img">
             <p class="splento-font text-center">splento</p>
             <p class="text-center open-sans35 margin0">Give the Gift of Memories</p>
             <div class="row margin0">
                         <div  class="col-md-offset-3 col-md-2">
-                            <img src="img/rate_form_item1.png" class="img-responsive center rate-img" alt="rate image"><p></p>
+                            <img src="img/gift_card_rate_img_1.jpg" class="img-responsive center rate-img" alt="rate image"><p></p>
                             <ul class="purple-point open-sans12">
                                 <li>2 Hour Photoshoot</li>
                                 <li>40 Retouched Photos</li>
@@ -47,11 +45,11 @@
                             <p class="text-center open-sans-bold20">£98</p>
                             <div class="radio radio-primary radio-centred">
                                 <input type="radio" name="rate" id="Radios1" value="98£">
-                                <label />
+                                <label></label>
                             </div>
                         </div>
                         <div class="col-md-2">
-                            <img src="img/rate_form_item2.png" class="img-responsive center rate-img" alt="rate image"><p></p>
+                            <img src="img/gift_card_rate_img_2.jpg" class="img-responsive center rate-img" alt="rate image"><p></p>
                             <ul class="green-point open-sans12">
                                 <li>3 Hour Photoshoot</li>
                                 <li>60 Retouched Photos</li>
@@ -63,11 +61,11 @@
                             <p class="text-center open-sans-bold20">£147</p>
                             <div class="radio radio-primary radio-centred">
                                 <input type="radio" name="rate" id="Radios2" value="147£">
-                                <label />
+                                <label></label>
                             </div>
                         </div>
                         <div class="col-md-2">
-                            <img src="img/rate_form_item3.png" class="img-responsive center rate-img" alt="rate image"><p></p>
+                            <img src="img/gift_card_rate_img_3.jpg" class="img-responsive center rate-img" alt="rate image"><p></p>
                             <ul class="blue-point open-sans12">
                                 <li>4 Hour Photoshoot</li>
                                 <li>80 Retouched Photos</li>
@@ -79,7 +77,7 @@
                             <p class="text-center open-sans-bold20">£299</p>
                             <div class="radio radio-primary radio-centred">
                                 <input type="radio" name="rate" id="Radios3" value="299£">
-                                <label />
+                                <label></label>
                             </div>
                         </div>
             </div>
@@ -93,5 +91,8 @@
         </div>
     </div>
 </div>
+
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
 </html>
