Update styles for responsive screens on gift card page

--- a/GiftCard.html
+++ b/GiftCard.html
@@ -19,7 +19,7 @@
 
     <!--Text-->
     <div class="row">
-        <div class="col-md-8 col-md-offset-2 margintop2em">
+        <div class="col-md-8 col-md-offset-2 margin-top2em">
             <p class="text-center open-sans35">Give the Gift of Memories</p>
             <p class="text-center open-sans-bold font-size-15">Made with love in London. Redeemable in London.</p>
             <p class ="text-center open-sans15">Splento gift card is not just a gift card, it's a perfect present in any occasion: birthdays, graduations, weddings, anniversaries, corporate gifts, hen parties.</p>
@@ -29,7 +29,7 @@
     </div>
 
     <!--DESKTOP-->
-    <div class="row visible-md-block visible-lg-block margintop2em">
+    <div class="row visible-md-block visible-lg-block margin-top2em">
         <div class="col-md-12">
             <p class="text-center">
                 <button class="btn btn-primary btn-lg btn-custom">BUY A GIFT CARD</button>
@@ -40,7 +40,7 @@
     </div>
 
     <!--MOBILE-->
-    <div class="row hidden-md hidden-lg margintop2em">
+    <div class="row hidden-md hidden-lg margin-top2em">
         <div class="col-xs-12">
             <p class="text-center">
                 <button class="btn btn-primary btn-custom">BUY A GIFT CARD</button>
@@ -58,26 +58,26 @@
     <!--Congratulations-->
     <div class="row">
         <div class="row">
-            <div style="position: absolute; width: 100%">
+            <div class="visible-md-block visible-lg-block visible-sm-block position-absolute">
                 <img src="img/gift_card_to_from_background.jpg" class="img-responsive center gift-card-img">
             </div>
-            <div class="col-lg-2 col-lg-offset-3 col-md-2 col-md-offset-2 col-sm-3 col-sm-offset-1" style="position: relative; margin-top: 14em" >
-                <p class="text-center open-sans15" style="margin-left: 2em">TO EMAIL</p>
-                <input type="text" class="dotted-gradient" id="emailTo" style="margin-left: 10px">
-                <p class="text-center open-sans15" style="margin-top: 2em; margin-left: 2em ">FROM EMAIL</p>
-                <input type="text" class="dotted-gradient" id="emailFrom" style="margin-left: 2em">
+            <div class="col-lg-2 col-lg-offset-3 col-md-2 col-md-offset-2 col-sm-2 col-sm-offset-2 margin-top14em position-relative">
+                <p class="text-center open-sans15">TO EMAIL</p>
+                <input type="text" class="dotted margin-left10 mobile-width" id="emailTo" >
+                <p class="text-center open-sans15 margin-top20px">FROM EMAIL</p>
+                <input type="text" class="dotted margin-left10 mobile-width" id="emailFrom" >
             </div>
-            <div class="col-lg-2 col-md-3 col-sm-3"  style="position: relative; margin-top: 14em">
-                <p class="splento-font text-center" style="margin-top: 1em; ">splento</p>
+            <div class="col-lg-2 col-md-3 col-sm-3 margin-top14em visible-md-block visible-lg-block visible-sm-block position-relative">
+                <p class="splento-font text-center margin-top1em">splento</p>
             </div>
-            <div class="col-lg-2 col-md-2 col-sm-3" style="position: relative; margin-top: 13em">
-                <p class="text-center open-sans15" style="margin-right: 4em;">A FEW WORDS</p>
-                <textarea class="rows-border-bottom" name="fewWords" cols="28" rows="4" style="margin-right: 4em;"></textarea>
+            <div class="col-lg-1 col-md-2 col-sm-2 margin-top12em position-relative">
+                <p class="text-center open-sans15">A FEW WORDS</p>
+                <textarea class="rows-border-bottom mobile-width" name="fewWords" cols="28" rows="4"></textarea>
             </div>
         </div>
         <div class="row">
             <div class="col-md-offset-3 col-md-6">
-                <p class="text-center" style="margin-top: 4em">
+                <p class="text-center margin-top4em" >
                     <span class="myrad-pro">REDEEM AT </span><a href="//splento.com/redeem" class="myrad-pro">SPLENTO.COM/REDEEM</a>
                 </p>
             </div>
