--- a/GiftCardFormRate.html
+++ b/GiftCardFormRate.html
@@ -19,7 +19,7 @@
 
     <!--Text-->
     <div class="row">
-        <div class="col-md-8 col-md-offset-2 margintop2em">
+        <div class="col-md-8 col-md-offset-2 margin-top2em">
             <p class="text-center open-sans35">Give the Gift of Memories</p>
             <p class="text-center open-sans-bold font-size-15">Made with love in London. Redeemable in London.</p>
             <p class ="text-center open-sans15">Splento gift card is not just a gift card, it's a perfect present in any occasion: birthdays, graduations, weddings, anniversaries, corporate gifts, hen parties.</p>
@@ -30,7 +30,7 @@
 
     <div class=" row-fluid">
             <img src="img/gift_card_rate_background.jpg" class="img-responsive center hidden-xs hidden-sm background-img">
-        <div class="col-md-12 position-to-img">
+        <div class="col-md-12 position-relative">
             <p class="splento-font text-center">splento</p>
             <p class="text-center open-sans35 margin0">Give the Gift of Memories</p>
             <div class="row margin0">
@@ -84,7 +84,7 @@
     </div>
         <div class="row margin0">
             <div class="col-xs-12">
-                <p class="text-center margintop1em">
+                <p class="text-center margin-top1em">
                     <button class="btn btn-primary btn-custom btn-lg">BUY NOW ></button>
                 </p>
             </div>
