--- a/GiftCardFormRate.html
+++ b/GiftCardFormRate.html
@@ -29,14 +29,14 @@
     </div>
 
     <div class=" row-fluid">
-            <img src="img/gift_card_rate_background.jpg" class="img-responsive center hidden-xs hidden-sm background-img">
+            <img src="img/gift_card_rate_background.jpg" class="img-responsive center hidden-xs hidden-sm hidden-md background-img">
         <div class="col-md-12 position-relative">
-            <p class="splento-font text-center">splento</p>
+            <p class="splento-font splento-margin text-center">splento</p>
             <p class="text-center open-sans35 margin0">Give the Gift of Memories</p>
             <div class="row margin0">
                         <div  class="col-md-offset-3 col-md-2">
                             <img src="img/gift_card_rate_img_1.jpg" class="img-responsive center rate-img" alt="rate image"><p></p>
-                            <ul class="purple-point open-sans12">
+                            <ul class="purple-point open-sans12 padding10">
                                 <li>2 Hour Photoshoot</li>
                                 <li>40 Retouched Photos</li>
                                 <li>Online Photo Gallery</li>
@@ -50,7 +50,7 @@
                         </div>
                         <div class="col-md-2">
                             <img src="img/gift_card_rate_img_2.jpg" class="img-responsive center rate-img" alt="rate image"><p></p>
-                            <ul class="green-point open-sans12">
+                            <ul class="green-point open-sans12 padding10">
                                 <li>3 Hour Photoshoot</li>
                                 <li>60 Retouched Photos</li>
                                 <li>Online Photo Gallery</li>
@@ -66,7 +66,7 @@
                         </div>
                         <div class="col-md-2">
                             <img src="img/gift_card_rate_img_3.jpg" class="img-responsive center rate-img" alt="rate image"><p></p>
-                            <ul class="blue-point open-sans12">
+                            <ul class="blue-point open-sans12 padding10">
                                 <li>4 Hour Photoshoot</li>
                                 <li>80 Retouched Photos</li>
                                 <li>Online Photo Gallery</li>
@@ -83,7 +83,7 @@
             </div>
     </div>
         <div class="row margin0">
-            <div class="col-xs-12">
+            <div class="col-xs-12 margin-top-15px">
                 <p class="text-center margin-top1em">
                     <button class="btn btn-primary btn-custom btn-lg">BUY NOW ></button>
                 </p>
@@ -94,5 +94,6 @@
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="js/splento.js"></script>
 </body>
 </html>
